# RSRayTracingV2

./: .envrc  .gitignore  Cargo.toml  README.md  build_web.sh  flake.nix  index.js  package-lock.json  package.json  run.sh  rust-toolchain.toml  server.js  server.mjs  start_server.sh  wasm-worker.js
docs/: rs_ray_tracing_v2.js  rs_ray_tracing_v2_bg.wasm  sw.js
src/: app.rs  lib.rs  linker.rs  main.rs  movement.rs  objects.rs  panels.rs  ray_tracer.rs  scene.rs  vec3.rs
src/ray_tracer/: mat44.rs  objects.rs  ray.rs  ray_tracer.rs  scene.rs  vec3.rs
web/: index.html  index.js  rs_ray_tracing_v2.js  rs_ray_tracing_v2_bg.wasm  server.js  sw.js  wasm-worker.js
