[package]
name = "rs_ray_tracing_v2"
version = "0.1.0"
authors = ["Arlo Blythe"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.17.0"
rayon = "1.5.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.79"
wasm-bindgen-rayon = { version = "1.0.3", features = ["no-bundler"] }
